# app/models/project.rb
@@ -1,0 +1,5 @@
+# Project
+class Project < ApplicationRecord
+  belongs_to :user
+  has_many :tasks, dependent: :destroy
+end
