# config/routes.rb
@@ -16,6 +16,9 @@ Rails.application.routes.draw do
 
   namespace :api do
     namespace :v1 do
+      resources :projects
+      resources :tasks
+
       get '/current_users', to: 'current_users#index'
     end
   end
